# accelerate-numeric

./: README.md  accelerate-numeric.cabal
src/Data/Array/Accelerate/: GaussianElimination.hs  Matrix.hs
src/Data/Array/Accelerate/Algo/: Check.hs  Fin.hs  LA.hs  String.hs
test/: Spec.hs
