name:                accelerate-numeric
version:             0.0.0.0
synopsis:            Various numerical algorithms written with Accelerate
description:         Various numerical algorithms written with Accelerate
homepage:            http://github.com/schernichkin/accelerate-numeric#readme
license:             BSD3
license-file:        LICENSE
author:              Stanislav Chernichkin
maintainer:          schernichkin@gmail.com
copyright:           Copyright (C) 2016 Stanislav Chernichkin
category:            Linear Algebra
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Array.Accelerate.Matrix
  build-depends:       base >= 4.7 && < 5
                     , accelerate
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite accelerate-numeric-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , accelerate
                     , accelerate-numeric
                     , ieee754
                     , HUnit
                     , QuickCheck
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
  ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N -t -M2G"
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schernichkin/accelerate-numeric
